@@ -1,0 +1,8 @@
+#include "options.ih"
+
+void Options::reloadPolicy()
+{
+    d_policyFile->reload();
+    loadPolicyOptions();
+    setPolicyOptions();
+}
