@@ -2,8 +2,8 @@
 
 void Stealth::childProcess()
 {
-//    prepareDaemon("/tmp/serr", "/tmp/serr");                // by Fork.
-    prepareDaemon();                // by Fork.
+    prepareDaemon("/tmp/serr", "/tmp/serr");                // by Fork.
+//    prepareDaemon();                // by Fork.
 
                                     // start the ipc interface thread
     thread interface(startIpcInterface, this);
